# ana-auth

./: .ana_skills.yml  .gitignore  CLAUDE.md  README.md  after_api_change.py  backup_db.py  docker-compose.yml  lint.py  mcc_build.py  mcc_config.py  mcc_config.yml  mcc_deploy.py  pyproject.toml  pytest-integration-report.xml  run_tests.py  setup_db.py  start_services.py
.claude/commands/: as-accept.md  as-codify.md  as-continue.md  as-debt-analysis.md  as-docufy.md  as-extend.md  as-final-verdict.md  as-from-changes.md  as-new.md  as-one-shot.md  as-status.md  as-storify.md  as-taskify.md  as-techify.md  as-truth-rearrange.md
.claude/skills/as-accept/: SKILL.md
.claude/skills/as-codify/: SKILL.md
.claude/skills/as-continue/: SKILL.md
.claude/skills/as-debt-analysis/: SKILL.md
.claude/skills/as-docufy/: SKILL.md
.claude/skills/as-extend/: SKILL.md
.claude/skills/as-final-verdict/: SKILL.md
.claude/skills/as-from-changes/: SKILL.md
.claude/skills/as-new/: SKILL.md
.claude/skills/as-one-shot/: SKILL.md
.claude/skills/as-status/: SKILL.md
.claude/skills/as-storify/: SKILL.md
.claude/skills/as-taskify/: SKILL.md
.claude/skills/as-techify/: SKILL.md
.claude/skills/as-truth-rearrange/: SKILL.md
.claude/skills/backend-logger/: SKILL.md
.claude/skills/backend-router/: SKILL.md
.claude/skills/backend-service/: SKILL.md
.claude/skills/backend-worker/: SKILL.md
.claude/skills/code-simplifier/: SKILL.md
.claude/skills/commit/: SKILL.md
.claude/skills/create-web-app/: SKILL.md
.claude/skills/database-design/: SKILL.md
.claude/skills/database-model/: SKILL.md
ana-speksi/: config.yml
ana-speksi/truth/: index.md
mcc/: conf-dev.yml  conf-prod.yml  daemon.template  deploy_server.py  ensure_admin.sql  nginx.template
src/api/: main.py  middleware.py
src/shared/: __init__.py  base_dto.py  config.py  logging.py
src/shared/db/: db_context.py
src/tests/: conftest.py
src/ui/: angular.json  package-lock.json  package.json  proxy.conf.json  tsconfig.json
(+158 files in other folders)
